// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example should allow access to generated tags and classes by a callback: classes 1`] = `
Set {
  "select-none",
  "p-5",
  "px-5",
  "p-1",
  "text-white",
  "hover:text-green-100",
  "hover:rounded-full",
  "bg-teal-100",
  "hover:w-1/3",
  "btn",
  "bg-black",
  "bg-blue-200",
  "bg-red-200",
  "!bg-blue-200",
  "pl-100px",
  "bg-yellow-200",
  "mt-2",
}
`;

exports[`example should allow access to generated tags and classes by a callback: classesPending 1`] = `
Set {
  "select-none",
  "en",
  "viewport",
  "module",
  "modulepreload",
  "stylesheet",
  "app",
  "p-5",
  "ts",
  "./Foo.vue",
  "px-5",
  "p-1",
  "text-white",
  "hover:text-green-100",
  "hover:rounded-full",
  "bg-teal-100",
  "hover:w-1/3",
  "true",
  "btn",
  "bar",
  "bg-black",
  "bg-blue-200",
  "bg-red-200",
  "!bg-blue-200",
  "postcss",
  "scss",
  "stylus",
  "pl-100px",
  "bg-yellow-200",
  "mt-2",
}
`;

exports[`example should allow access to generated tags and classes by a callback: tags 1`] = `
Set {
  "html",
  "body",
  "div",
  "head",
  "meta",
  "title",
  "script",
  "link",
  "nav",
  "h2",
  "a",
  "style",
}
`;

exports[`example should allow access to generated tags and classes by a callback: tagsPending 1`] = `
Set {
  "html",
  "body",
  "div",
  "head",
  "meta",
  "title",
  "script",
  "link",
  "nav",
  "h2",
  "a",
  "style",
}
`;

exports[`example should work: classes 1`] = `
Set {
  "select-none",
  "p-5",
  "px-5",
  "p-1",
  "text-white",
  "hover:text-green-100",
  "hover:rounded-full",
  "bg-teal-100",
  "hover:w-1/3",
  "btn",
  "bg-black",
  "bg-blue-200",
  "bg-red-200",
  "!bg-blue-200",
  "pl-100px",
  "bg-yellow-200",
  "mt-2",
}
`;

exports[`example should work: generated-css 1`] = `
"/* windicss layer base */
*, ::before, ::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: #e5e7eb;
}
* {
  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
}
:root {
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
}
:-moz-focusring {
  outline: 1px dotted ButtonText;
}
:-moz-ui-invalid {
  box-shadow: none;
}
::moz-focus-inner {
  border-style: none;
  padding: 0;
}
::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
  height: auto;
}
::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
abbr[title] {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}
a {
  color: inherit;
  text-decoration: inherit;
}
body {
  margin: 0;
  font-family: inherit;
  line-height: inherit;
}
html {
  -webkit-text-size-adjust: 100%;
  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\";
  line-height: 1.5;
}
h2 {
  margin: 0;
  font-size: inherit;
  font-weight: inherit;
}
/* windicss layer components */
.btn {
  --tw-border-opacity: 1;
  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
  border-radius: 0.25rem;
  border-width: 1px;
  display: inline-block;
  margin: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --tw-text-opacity: 1;
  color: rgba(75, 85, 99, var(--tw-text-opacity));
}
.btn:hover {
  --tw-shadow-color: 0, 0, 0;
  --tw-shadow: 0 1px 3px 0 rgba(var(--tw-shadow-color), 0.1), 0 1px 2px 0 rgba(var(--tw-shadow-color), 0.06);
  -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
/* windicss layer utilities */
.bg-teal-100 {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 153, 102, var(--tw-bg-opacity));
}
.bg-black {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
}
.bg-blue-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
}
.bg-red-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
}
.\\\\!bg-blue-200 {
  --tw-bg-opacity: 1 !important;
  background-color: rgba(191, 219, 254, var(--tw-bg-opacity)) !important;
}
.bg-yellow-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
}
.hover\\\\:rounded-full:hover {
  border-radius: 9999px;
}
.mt-2 {
  margin-top: 0.5rem;
}
.p-5 {
  padding: 1.25rem;
}
.p-1 {
  padding: 0.25rem;
}
.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}
.pl-100px {
  padding-left: 100px;
}
.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}
.hover\\\\:text-green-100:hover {
  --tw-text-opacity: 1;
  color: rgba(209, 250, 229, var(--tw-text-opacity));
}
.select-none {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.hover\\\\:w-1\\\\/3:hover {
  width: 33.333333%;
}"
`;

exports[`example should work: generated-css-base 1`] = `
"/* windicss layer base */
*, ::before, ::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: #e5e7eb;
}
* {
  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
  --tw-ring-offset-width: 0px;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 #0000;
  --tw-ring-shadow: 0 0 #0000;
  --tw-shadow: 0 0 #0000;
}
:root {
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
}
:-moz-focusring {
  outline: 1px dotted ButtonText;
}
:-moz-ui-invalid {
  box-shadow: none;
}
::moz-focus-inner {
  border-style: none;
  padding: 0;
}
::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
  height: auto;
}
::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
[type='search'] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
abbr[title] {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}
a {
  color: inherit;
  text-decoration: inherit;
}
body {
  margin: 0;
  font-family: inherit;
  line-height: inherit;
}
html {
  -webkit-text-size-adjust: 100%;
  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Roboto,\\"Helvetica Neue\\",Arial,\\"Noto Sans\\",sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\",\\"Noto Color Emoji\\";
  line-height: 1.5;
}
h2 {
  margin: 0;
  font-size: inherit;
  font-weight: inherit;
}"
`;

exports[`example should work: generated-css-components 1`] = `
"/* windicss layer components */
.btn {
  --tw-border-opacity: 1;
  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
  border-radius: 0.25rem;
  border-width: 1px;
  display: inline-block;
  margin: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  --tw-text-opacity: 1;
  color: rgba(75, 85, 99, var(--tw-text-opacity));
}
.btn:hover {
  --tw-shadow-color: 0, 0, 0;
  --tw-shadow: 0 1px 3px 0 rgba(var(--tw-shadow-color), 0.1), 0 1px 2px 0 rgba(var(--tw-shadow-color), 0.06);
  -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}"
`;

exports[`example should work: generated-css-utilities 1`] = `
"/* windicss layer utilities */
.bg-teal-100 {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 153, 102, var(--tw-bg-opacity));
}
.bg-black {
  --tw-bg-opacity: 1;
  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
}
.bg-blue-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(191, 219, 254, var(--tw-bg-opacity));
}
.bg-red-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
}
.\\\\!bg-blue-200 {
  --tw-bg-opacity: 1 !important;
  background-color: rgba(191, 219, 254, var(--tw-bg-opacity)) !important;
}
.bg-yellow-200 {
  --tw-bg-opacity: 1;
  background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
}
.hover\\\\:rounded-full:hover {
  border-radius: 9999px;
}
.mt-2 {
  margin-top: 0.5rem;
}
.p-5 {
  padding: 1.25rem;
}
.p-1 {
  padding: 0.25rem;
}
.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}
.pl-100px {
  padding-left: 100px;
}
.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}
.hover\\\\:text-green-100:hover {
  --tw-text-opacity: 1;
  color: rgba(209, 250, 229, var(--tw-text-opacity));
}
.select-none {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.hover\\\\:w-1\\\\/3:hover {
  width: 33.333333%;
}"
`;

exports[`example should work: tags 1`] = `
Set {
  "html",
  "body",
  "div",
  "head",
  "meta",
  "title",
  "script",
  "link",
  "nav",
  "h2",
  "a",
  "style",
}
`;

exports[`example v3: base 1`] = `
"/* windicss layer base */
"
`;

exports[`example v3: components 1`] = `
"/* windicss layer components */
"
`;

exports[`example v3: utilities 1`] = `
"/* windicss layer utilities */
[hover\\\\:bg~=\\"gray-400\\"]:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
}
[hover\\\\:bg~=\\"opacity-10\\"]:hover {
  --tw-bg-opacity: 0.1;
}
.border-gray-200 {
  --tw-border-opacity: 1;
  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
}
.dark .dark\\\\:border-dark-300 {
  --tw-border-opacity: 1;
  border-color: rgba(45, 45, 45, var(--tw-border-opacity));
}
[rounded~=\\"md\\"] {
  border-radius: 0.375rem;
}
[border~=\\"2\\"] {
  border-width: 2px;
}
.grid {
  display: -ms-grid;
  display: grid;
}
[font~=\\"mono\\"] {
  font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,\\"Liberation Mono\\",\\"Courier New\\",monospace;
}
[font~=\\"bold\\"] {
  font-weight: 700;
}
[text~=\\"xl\\"] {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.opacity-10 {
  opacity: 0.1;
}
.p-5 {
  padding: 1.25rem;
}
[p~=\\"x-2\\"] {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}
[p~=\\"y-1\\"] {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}
[text~=\\"lime-400\\"] {
  --tw-text-opacity: 1;
  color: rgba(163, 230, 53, var(--tw-text-opacity));
}
.italic {
  font-style: italic;
}
@media (min-width: 768px) {
  [md~=\\"italic\\"] {
    font-style: italic;
  }
}"
`;
